# ocamidis

./: dune-project  ocamidis.opam
example/: dune  ocamidis_example.ml
src/: arr_ex.ml  char_ex.ml  dune  event.ml  int_ex.ml  mask.ml  note.ml  tag.ml
